--- a/Components.html
+++ b/Components.html
@@ -78,7 +78,7 @@
         <div class="close" >
             <img src="assets/close.svg" alt="">
         </div>
-            <div class="left-container grass">
+            <div class="left-container ghost">
                 <div class="icon-box">
                     <div class="icon-mask">
                         <img src="assets/icon-types/grass.svg" alt="" >
@@ -143,7 +143,7 @@
                                     HP
                                 </span>
                                 <ul class="stats-bar">
-                                    <div class="bar">
+                                    <div class="bar hp">
                                         <ul>
                                             <li></li>
                                             <li></li>
@@ -159,7 +159,7 @@
                                     Attack
                                 </span>
                                 <ul class="stats-bar">
-                                    <div class="bar">
+                                    <div class="bar attack">
                                         <ul>
                                             <li></li>
                                             <li></li>
@@ -175,7 +175,7 @@
                                     Defense
                                 </span>
                                 <ul class="stats-bar">
-                                    <div class="bar">
+                                    <div class="bar defense">
                                         <ul>
                                             <li></li>
                                             <li></li>
@@ -191,7 +191,7 @@
                                     Sp.attack
                                 </span>
                                 <ul class="stats-bar">
-                                    <div class="bar">
+                                    <div class="bar sp-attack">
                                         <ul>
                                             <li></li>
                                             <li></li>
@@ -207,7 +207,7 @@
                                     Sp.defense
                                 </span>
                                 <ul class="stats-bar">
-                                    <div class="bar">
+                                    <div class="bar sp-defense">
                                         <ul>
                                             <li></li>
                                             <li></li>
@@ -223,7 +223,7 @@
                                     Speed
                                 </span>
                                 <ul class="stats-bar">
-                                    <div class="bar">
+                                    <div class="bar speed">
                                         <ul>
                                             <li></li>
                                             <li></li>
@@ -248,7 +248,6 @@
 
         </div>
     </div>
-
 
     
 
