Commiting responsivity main changes

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="card-list">
                 <div class="card">
                     <div class="img-mask">
-                        <div class="img-background grass">
+                        <div class="img-background fairy">
                             <img src="assets/bulbasaur.svg" alt="pokemon">
                         </div>
                     </div>
@@ -271,7 +271,7 @@
         <div class="close" >
             <img src="assets/close.svg" alt="">
         </div>
-            <div class="left-container grass">
+            <div class="left-container fire">
                 <div class="icon-box">
                     <div class="icon-mask">
                         <img src="assets/icon-types/grass.svg" alt="" >
@@ -308,6 +308,10 @@
                             <li>
                                 <span>Weight</span>
                                 <strong>6.9kg</strong>
+                            </li>
+                            <li>
+                                <span>Category</span>
+                                <strong>Seed</strong>
                             </li>
                             <li>
                                 <span>Abilities</span>
