--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="card-list">
                 <div class="card">
                     <div class="img-mask">
-                        <div class="img-background fairy">
+                        <div class="img-background grass">
                             <img src="assets/bulbasaur.svg" alt="pokemon">
                         </div>
                     </div>
@@ -271,7 +271,7 @@
         <div class="close" >
             <img src="assets/close.svg" alt="">
         </div>
-            <div class="left-container fire">
+            <div class="left-container grass">
                 <div class="icon-box">
                     <div class="icon-mask">
                         <img src="assets/icon-types/grass.svg" alt="" >
