--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,  initial-scale=1.02, minimum-scale=1.02">
     <title>PokeProject</title>  
     <link
     rel="stylesheet"
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="bodywrapper">
+        
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide top-section">
@@ -216,6 +217,7 @@
         </div>
     </footer>
 
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
