--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <li class="stone" data-value="rock"><img src="assets/icon-types/rock.svg "> <span >Rock </span> </li>
                     <li class="dragon" data-value="dragon"><img src="assets/icon-types/dragon.svg "> <span>Dragon </span> </li>
                     <li class="steel" data-value="steel"><img src="assets/icon-types/steel.svg "> <span> Steel </span> </li>
-                    <li class="eletric" data-value="eletric"><img src="assets/icon-types/electric.svg "> <span >Eletric </span> </li>
+                    <li class="electric" data-value="electric"><img src="assets/icon-types/electric.svg "> <span >Eletric </span> </li>
                     <li class="water" data-value="water"><img src="assets/icon-types/water.svg "> <span >Water </span> </li>
                     <li class="fire" data-value="fire"><img src="assets/icon-types/fire.svg "> <span >Fire </span> </li>
                     <li class="bug" data-value="bug"><img src="assets/icon-types/bug.svg "> <span>Bug </span> </li>
