--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
                         <h2>Select your pokemon</h2>
                         <form class="search" onsubmit="return false" spellcheck="false">
-                           <input type="text" name="name" placeholder="Search Pokemon">
+                           <input type="text" name="name" placeholder="Search Pokemon" maxlength="12">
                            <button class="img-mask">
                                <img src="assets/icon-search.svg" alt="search">
                             </button>
@@ -114,7 +114,7 @@
             
                         <h2>Select your pokemon</h2>
                         <div class="search">
-                           <input type="text" name="name" placeholder="Search Pokemon">
+                           <input type="text" name="name" placeholder="Search Pokemon" maxlength="12">
                            <div class="img-mask">
                                <img src="assets/icon-search.svg" alt="search"></div>
                        </div>
